# p2p_video_streaming

./: README.md
Release/: release.iss
Release/PeerClient/: rel.iss
Release/TrackerServer/: rel.iss
dev/: .gitignore  README.md
dev/P2P-Project/: README.md
dev/P2P-Project/PeerClient/: CMakeLists.txt  main.cpp
dev/P2P-Project/TrackerServer/: CMakeLists.txt  main.cpp
